--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Movie Together</title>
     <script src="../playerJS/playerjs.js" type="text/javascript"></script>
-
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
